log/ares_global_20250807_225821.log
2025-08-07 22:58:21,004 - AresGlobal - INFO - ================================================================================
2025-08-07 22:58:21,004 - AresGlobal - INFO - 📊 SESSION SUMMARY
2025-08-07 22:58:21,004 - AresGlobal - INFO - Session started: 2025-08-07 22:58:21
2025-08-07 22:58:21,004 - AresGlobal - INFO - Global log file: ares_global_20250807_225821.log
2025-08-07 22:58:21,004 - AresGlobal - INFO - This file contains ALL logs for this session
2025-08-07 22:58:21,004 - AresGlobal - INFO - ================================================================================
2025-08-07 22:58:21,005 - AresGlobal - INFO - [SYSTEM] ================================================================================
2025-08-07 22:58:21,005 - AresGlobal - INFO - [SYSTEM] 🚀 ARES LAUNCHER STARTED - Mode: INITIALIZATION
2025-08-07 22:58:21,005 - AresGlobal - INFO - [SYSTEM] Start time: 2025-08-07 22:58:21
2025-08-07 22:58:21,005 - AresGlobal - INFO - [SYSTEM] Log directory: log
2025-08-07 22:58:21,005 - AresGlobal - INFO - [SYSTEM] ================================================================================
2025-08-07 22:58:21,005 - AresGlobal.AresLauncher - INFO - ================================================================================
2025-08-07 22:58:21,005 - AresGlobal.AresLauncher - INFO - 🚀 ARES COMPREHENSIVE LAUNCHER
2025-08-07 22:58:21,005 - AresGlobal.AresLauncher - INFO - ================================================================================
2025-08-07 22:58:21,005 - AresGlobal.AresLauncher - INFO - Start time: 2025-08-07 22:58:21
2025-08-07 22:58:21,005 - AresGlobal.AresLauncher - INFO - Log directory: log
2025-08-07 22:58:21,005 - AresGlobal.AresLauncher - INFO - Log level: INFO
2025-08-07 22:58:21,005 - AresGlobal.AresLauncher - INFO - Global log file: ares_global_20250807_225821.log
2025-08-07 22:58:21,005 - AresGlobal.AresLauncher - INFO - ================================================================================
2025-08-07 22:58:21,005 - AresGlobal - INFO - [SYSTEM] ================================================================================
2025-08-07 22:58:21,005 - AresGlobal - INFO - [SYSTEM] 🚀 ARES LAUNCHER STARTED - Mode: load - Symbol: ETHUSDT - Exchange: BINANCE
2025-08-07 22:58:21,005 - AresGlobal - INFO - [SYSTEM] Start time: 2025-08-07 22:58:21
2025-08-07 22:58:21,005 - AresGlobal - INFO - [SYSTEM] Log directory: log
2025-08-07 22:58:21,006 - AresGlobal - INFO - [SYSTEM] ================================================================================
2025-08-07 22:58:21,006 - AresGlobal.AresLauncher - INFO - 🔄 Starting data loading for ETHUSDT on BINANCE
2025-08-07 22:58:21,006 - AresGlobal.AresLauncher - INFO - 📥 Step 1: Downloading data...
2025-08-07 22:58:21,006 - AresGlobal.AresLauncher - INFO - 🔧 Running download command: /opt/homebrew/Caskroom/miniforge/base/bin/python backtesting/ares_data_downloader_optimized.py --symbol ETHUSDT --exchange BINANCE --lookback-years 2
2025-08-07 22:58:21,028 - AresGlobal.AresLauncher - ERROR - ❌ Download failed:   File "/Users/remyroche/Documents/Ares/backtesting/ares_data_downloader_optimized.py", line 975
    else:
    ^^^^
SyntaxError: invalid syntax

2025-08-07 22:58:21,028 - AresGlobal - INFO - [SYSTEM] ================================================================================
2025-08-07 22:58:21,028 - AresGlobal - INFO - [SYSTEM] 🛑 ARES LAUNCHER ENDED - Exit code: 1
2025-08-07 22:58:21,029 - AresGlobal - INFO - [SYSTEM] End time: 2025-08-07 22:58:21
2025-08-07 22:58:21,029 - AresGlobal - INFO - [SYSTEM] ================================================================================
2025-08-07 22:58:21,029 - AresGlobal.AresLauncher - INFO - 🧹 Cleaning up processes...
2025-08-07 22:58:21,029 - AresGlobal.AresLauncher - INFO - ✅ Cleanup completed
